Support for nav (both pills and tabs). Partial navbar support. Both undocumented.

--- a/examples/source/template.html
+++ b/examples/source/template.html
@@ -12,5 +12,10 @@
         <div class="container">
             [EXAMPLES]
         </div>
+        <pre style="background-color: #fff; border-width: 0px;">
+
+
+
+        </pre>
     </body>
 </html>
