--- a/examples/source/template.html
+++ b/examples/source/template.html
@@ -10,7 +10,7 @@
 
     <body>
         <div class="container">
-            [EXAMPLES]
+            [STENCILS]
         </div>
         <pre style="background-color: #fff; border-width: 0px;">
 
