iller.yaml in, cpanfile out

--- a/examples/icon-1.html
+++ b/examples/icon-1.html
@@ -16,15 +16,15 @@
 %= icon &#39;sort-by-attributes-alt&#39;</pre>
 <pre>&lt;span class=&quot;glyphicon glyphicon-copyright-mark&quot;&gt;&lt;/span&gt;
 &lt;span class=&quot;glyphicon glyphicon-sort-by-attributes-alt&quot;&gt;&lt;/span&gt;</pre>
-<p>    <span class="glyphicon glyphicon-copyright-mark"></span>    <span class="glyphicon glyphicon-sort-by-attributes-alt"></span></p>
-<p><hr /></p>
+<div>    <span class="glyphicon glyphicon-copyright-mark"></span>    <span class="glyphicon glyphicon-sort-by-attributes-alt"></span></div>
+<hr />
 <pre>&lt;%= icon &#39;copyright-mark&#39; %&gt;</pre>
 <pre>&lt;span class=&quot;glyphicon glyphicon-copyright-mark&quot;&gt;&lt;/span&gt;</pre>
-<p>    <span class="glyphicon glyphicon-copyright-mark"></span></p>
-<p><hr /></p>
+<div>    <span class="glyphicon glyphicon-copyright-mark"></span></div>
+<hr />
 <pre>%= icon &#39;sort-by-attributes-alt&#39;</pre>
 <pre>&lt;span class=&quot;glyphicon glyphicon-sort-by-attributes-alt&quot;&gt;&lt;/span&gt;</pre>
-<p>    <span class="glyphicon glyphicon-sort-by-attributes-alt"></span></p>
+<div>    <span class="glyphicon glyphicon-sort-by-attributes-alt"></span></div>
         </div>
         <pre style="background-color: #fff; border-width: 0px;">
 
