--- a/examples/nav-1.html
+++ b/examples/nav-1.html
@@ -26,8 +26,8 @@
     &lt;li&gt;&lt;a href=&quot;#&quot;&gt;Item 3&lt;/a&gt;&lt;/li&gt;
     &lt;li class=&quot;disabled&quot;&gt;&lt;a href=&quot;#&quot;&gt;Item 4&lt;/a&gt;&lt;/li&gt;
 &lt;/ul&gt;</pre>
-<p>    <ul class="nav nav-pills">        <li><a href="#">Item 1</a></li>        <li class="active"><a href="#">Item 2</a></li>        <li><a href="#">Item 3</a></li>        <li class="disabled"><a href="#">Item 4</a></li>    </ul></p>
-<p><hr /></p>
+<div>    <ul class="nav nav-pills">        <li><a href="#">Item 1</a></li>        <li class="active"><a href="#">Item 2</a></li>        <li><a href="#">Item 3</a></li>        <li class="disabled"><a href="#">Item 4</a></li>    </ul></div>
+<hr />
 <p>A tab navigation with a menu:</p>
 <pre>&lt;%= nav justified, id =&gt; &#39;my-nav&#39;, tabs =&gt; [
             [&#39;Item 1&#39;, [&#39;#&#39;] ],
@@ -56,7 +56,7 @@
         &lt;/ul&gt;
     &lt;/li&gt;
 &lt;/ul&gt;</pre>
-<p>    <ul class="nav nav-justified nav-tabs" id="my-nav">        <li><a href="#">Item 1</a></li>        <li class="active"><a href="#">Item 2</a></li>        <li><a href="#">Item 3</a></li>        <li class="dropdown">            <a class="dropdown-toggle" data-toggle="dropdown" href="#">Dropdown <span class="caret"></span></a>            <ul class="dropdown-menu">                <li><a href="#">There are...</a></li>                <li><a href="#">...three...</a></li>                <li class="divider"></li>                <li><a href="#">...choices</a></li>            </ul>        </li>    </ul></p>
+<div>    <ul class="nav nav-justified nav-tabs" id="my-nav">        <li><a href="#">Item 1</a></li>        <li class="active"><a href="#">Item 2</a></li>        <li><a href="#">Item 3</a></li>        <li class="dropdown">            <a class="dropdown-toggle" data-toggle="dropdown" href="#">Dropdown <span class="caret"></span></a>            <ul class="dropdown-menu">                <li><a href="#">There are...</a></li>                <li><a href="#">...three...</a></li>                <li class="divider"></li>                <li><a href="#">...choices</a></li>            </ul>        </li>    </ul></div>
         </div>
         <pre style="background-color: #fff; border-width: 0px;">
 
