--- a/examples/panel-1.html
+++ b/examples/panel-1.html
@@ -18,8 +18,8 @@
     &lt;div class=&quot;panel-body&quot;&gt;
     &lt;/div&gt;
 &lt;/div&gt;</pre>
-<p>    <div class="panel panel-default">        <div class="panel-body">        </div>    </div></p>
-<p><hr /></p>
+<div>    <div class="panel panel-default">        <div class="panel-body">        </div>    </div></div>
+<hr />
 <p>If you want a panel without title, set the title to <code>undef</code>:</p>
 <pre>%= panel undef ,=&gt; begin
     &lt;p&gt;A short text.&lt;/p&gt;
@@ -29,8 +29,8 @@
         &lt;p&gt;A short text.&lt;/p&gt;
     &lt;/div&gt;
 &lt;/div&gt;</pre>
-<p>    <div class="panel panel-default">        <div class="panel-body">            <p>A short text.</p>        </div>    </div></p>
-<p><hr /></p>
+<div>    <div class="panel panel-default">        <div class="panel-body">            <p>A short text.</p>        </div>    </div></div>
+<hr />
 <pre>%= panel &#39;The Header&#39; =&gt; begin
     &lt;p&gt;A short text.&lt;/p&gt;
 %  end</pre>
@@ -42,8 +42,8 @@
         &lt;p&gt;A short text.&lt;/p&gt;
     &lt;/div&gt;
 &lt;/div&gt;</pre>
-<p>    <div class="panel panel-default">        <div class="panel-heading">            <h3 class="panel-title">The Header</h3>        </div>        <div class="panel-body">            <p>A short text.</p>        </div>    </div></p>
-<p><hr /></p>
+<div>    <div class="panel panel-default">        <div class="panel-heading">            <h3 class="panel-title">The Header</h3>        </div>        <div class="panel-body">            <p>A short text.</p>        </div>    </div></div>
+<hr />
 <p>A <code>success</code> panel with a header:</p>
 <pre>%= panel &#39;Panel 5&#39;, success, begin
     &lt;p&gt;A short text.&lt;/p&gt;
@@ -56,7 +56,7 @@
         &lt;p&gt;A short text.&lt;/p&gt;
     &lt;/div&gt;
 &lt;/div&gt;</pre>
-<p>    <div class="panel panel-success">        <div class="panel-heading">            <h3 class="panel-title">Panel 5</h3>        </div>        <div class="panel-body">            <p>A short text.</p>        </div>    </div></p>
+<div>    <div class="panel panel-success">        <div class="panel-heading">            <h3 class="panel-title">Panel 5</h3>        </div>        <div class="panel-body">            <p>A short text.</p>        </div>    </div></div>
         </div>
         <pre style="background-color: #fff; border-width: 0px;">
 
