--- a/examples/input_group-1.html
+++ b/examples/input_group-1.html
@@ -20,8 +20,8 @@
     &lt;span class=&quot;input-group-addon&quot;&gt;&lt;input name=&quot;agreed&quot; type=&quot;checkbox&quot; /&gt;&lt;/span&gt;
     &lt;input class=&quot;form-control&quot; id=&quot;username&quot; type=&quot;text&quot; name=&quot;username&quot; /&gt;
 &lt;/div&gt;</pre>
-<p>    <div class="input-group">        <span class="input-group-addon"><input name="agreed" type="checkbox" /></span>        <input class="form-control" id="username" type="text" name="username" />    </div></p>
-<p><hr /></p>
+<div>    <div class="input-group">        <span class="input-group-addon"><input name="agreed" type="checkbox" /></span>        <input class="form-control" id="username" type="text" name="username" />    </div></div>
+<hr />
 <p>A <code>large</code> input group with a radio button prepended and a string appended:</p>
 <pre>&lt;%= input large,
           prepend =&gt; { radio_button =&gt; [&#39;yes&#39;] },
@@ -33,8 +33,8 @@
     &lt;input class=&quot;form-control&quot; id=&quot;username&quot; type=&quot;text&quot; name=&quot;username&quot; /&gt;
     &lt;span class=&quot;input-group-addon&quot;&gt;@&lt;/span&gt;
 &lt;/div&gt;</pre>
-<p>    <div class="input-group input-group-lg">        <span class="input-group-addon"><input name="yes" type="radio" /></span>        <input class="form-control" id="username" type="text" name="username" />        <span class="input-group-addon">@</span>    </div></p>
-<p><hr /></p>
+<div>    <div class="input-group input-group-lg">        <span class="input-group-addon"><input name="yes" type="radio" /></span>        <input class="form-control" id="username" type="text" name="username" />        <span class="input-group-addon">@</span>    </div></div>
+<hr />
 <p>An input group with a button:</p>
 <pre>&lt;%= input input =&gt; { text_field =&gt; [&#39;username&#39;] },
           append =&gt; { button =&gt; [&#39;Click me!&#39;] },
@@ -43,8 +43,8 @@
     &lt;input class=&quot;form-control&quot; id=&quot;username&quot; type=&quot;text&quot; name=&quot;username&quot; /&gt;
     &lt;span class=&quot;input-group-btn&quot;&gt;&lt;button class=&quot;btn btn-default&quot; type=&quot;button&quot;&gt;Click me!&lt;/button&gt;&lt;/span&gt;
 &lt;/div&gt;</pre>
-<p>    <div class="input-group">        <input class="form-control" id="username" type="text" name="username" />        <span class="input-group-btn"><button class="btn btn-default" type="button">Click me!</button></span>    </div></p>
-<p><hr /></p>
+<div>    <div class="input-group">        <input class="form-control" id="username" type="text" name="username" />        <span class="input-group-btn"><button class="btn btn-default" type="button">Click me!</button></span>    </div></div>
+<hr />
 <p>An input group with a button dropdown appended. Note that <code>right</code> is manually applied:</p>
 <pre>&lt;%= input input  =&gt; { text_field =&gt; [&#39;username&#39;] },
           append =&gt; { buttongroup =&gt; [[&#39;The button&#39;, caret, right, items =&gt; [
@@ -68,8 +68,8 @@
         &lt;/ul&gt;
     &lt;/div&gt;
 &lt;/div&gt;</pre>
-<p>    <div class="input-group">        <input class="form-control" id="username" type="text" name="username" />        <div class="input-group-btn">            <button class="btn btn-default dropdown-toggle" type="button" data-toggle="dropdown">The button <span class="caret"></span>            </button>            <ul class="dropdown-menu dropdown-menu-right">                <li><a class="menuitem" href="item1" tabindex="-1">Item 1</a></li>                <li><a class="menuitem" href="item2" tabindex="-1">Item 2</a></li>                <li class="divider"></li>                <li><a class="menuitem" href="item3" tabindex="-1">Item 3</a></li>            </ul>        </div>    </div></p>
-<p><hr /></p>
+<div>    <div class="input-group">        <input class="form-control" id="username" type="text" name="username" />        <div class="input-group-btn">            <button class="btn btn-default dropdown-toggle" type="button" data-toggle="dropdown">The button <span class="caret"></span>            </button>            <ul class="dropdown-menu dropdown-menu-right">                <li><a class="menuitem" href="item1" tabindex="-1">Item 1</a></li>                <li><a class="menuitem" href="item2" tabindex="-1">Item 2</a></li>                <li class="divider"></li>                <li><a class="menuitem" href="item3" tabindex="-1">Item 3</a></li>            </ul>        </div>    </div></div>
+<hr />
 <p>An input group with a split button dropdown prepended:</p>
 <pre>&lt;%= input input   =&gt; { text_field =&gt; [&#39;username&#39;] },
           prepend =&gt; { buttongroup =&gt; [
@@ -102,7 +102,7 @@
     &lt;/div&gt;
     &lt;input class=&quot;form-control&quot; id=&quot;username&quot; type=&quot;text&quot; name=&quot;username&quot; /&gt;
 &lt;/div&gt;</pre>
-<p>    <div class="input-group">        <div class="input-group-btn">            <a class="btn btn-default" href="http://www.example.com/">Link 1</a>            <div class="btn-group">                <button class="btn btn-default dropdown-toggle" type="button" data-toggle="dropdown"><span class="caret"></span>                </button>                <ul class="dropdown-menu">                    <li><a class="menuitem" href="item1" tabindex="-1">Item 1</a></li>                    <li><a class="menuitem" href="item2" tabindex="-1">Item 2</a></li>                    <li class="divider"></li>                    <li><a class="menuitem" href="item3" tabindex="-1">Item 3</a></li>                </ul>            </div>        </div>        <input class="form-control" id="username" type="text" name="username" />    </div></p>
+<div>    <div class="input-group">        <div class="input-group-btn">            <a class="btn btn-default" href="http://www.example.com/">Link 1</a>            <div class="btn-group">                <button class="btn btn-default dropdown-toggle" type="button" data-toggle="dropdown"><span class="caret"></span>                </button>                <ul class="dropdown-menu">                    <li><a class="menuitem" href="item1" tabindex="-1">Item 1</a></li>                    <li><a class="menuitem" href="item2" tabindex="-1">Item 2</a></li>                    <li class="divider"></li>                    <li><a class="menuitem" href="item3" tabindex="-1">Item 3</a></li>                </ul>            </div>        </div>        <input class="form-control" id="username" type="text" name="username" />    </div></div>
         </div>
         <pre style="background-color: #fff; border-width: 0px;">
 
