--- a/examples/table-1.html
+++ b/examples/table-1.html
@@ -47,8 +47,8 @@
         &lt;/tr&gt;
     &lt;/tbody&gt;
 &lt;/table&gt;</pre>
-<p>    <table class="table">        <thead>            <tr>                <th>th 1</th>                <th>th 2</th>        </thead>        <tbody>            <tr>                <td>Cell 1</td>                <td>Cell 2</td>            </tr>            <tr>                <td>Cell 1</td>                <td>Cell 2</td>            </tr>        </tbody>    </table></p>
-<p><hr /></p>
+<div>    <table class="table">        <thead>            <tr>                <th>th 1</th>                <th>th 2</th>        </thead>        <tbody>            <tr>                <td>Cell 1</td>                <td>Cell 2</td>            </tr>            <tr>                <td>Cell 1</td>                <td>Cell 2</td>            </tr>        </tbody>    </table></div>
+<hr />
 <p>Several classes applied to the table:</p>
 <pre>%= table hover, striped, condensed, begin
     &lt;thead&gt;
@@ -84,8 +84,8 @@
         &lt;/tr&gt;
     &lt;/tbody&gt;
 &lt;/table&gt;</pre>
-<p>    <table class="table table-condensed table-hover table-striped">        <thead>            <tr>                <th>th 1</th>                <th>th 2</th>        </thead>        <tbody>            <tr>                <td>Cell 1</td>                <td>Cell 2</td>            </tr>            <tr>                <td>Cell 1</td>                <td>Cell 2</td>            </tr>        </tbody>    </table></p>
-<p><hr /></p>
+<div>    <table class="table table-condensed table-hover table-striped">        <thead>            <tr>                <th>th 1</th>                <th>th 2</th>        </thead>        <tbody>            <tr>                <td>Cell 1</td>                <td>Cell 2</td>            </tr>            <tr>                <td>Cell 1</td>                <td>Cell 2</td>            </tr>        </tbody>    </table></div>
+<hr />
 <p>A <code>condensed</code> table with an <code>id</code> wrapped in a <code>success</code> panel:</p>
 <pre>%= table &#39;Heading Table 4&#39;, panel =&gt; { success }, condensed, id =&gt; &#39;the-table&#39;, begin
         &lt;thead&gt;
@@ -126,8 +126,8 @@
         &lt;/tbody&gt;
     &lt;/table&gt;
 &lt;/div&gt;</pre>
-<p>    <div class="panel panel-success">        <div class="panel-heading">            <h3 class="panel-title">Heading Table 4</h3>        </div>        <table class="table table-condensed" id="the-table">            <thead>                <tr>                    <th>th 1</th>                    <th>th 2</th>            </thead>            <tbody>                <tr>                    <td>Cell 1</td>                    <td>Cell 2</td>                </tr>                <tr>                    <td>Cell 1</td>                    <td>Cell 2</td>                </tr>            </tbody>        </table>    </div></p>
-<p><hr /></p>
+<div>    <div class="panel panel-success">        <div class="panel-heading">            <h3 class="panel-title">Heading Table 4</h3>        </div>        <table class="table table-condensed" id="the-table">            <thead>                <tr>                    <th>th 1</th>                    <th>th 2</th>            </thead>            <tbody>                <tr>                    <td>Cell 1</td>                    <td>Cell 2</td>                </tr>                <tr>                    <td>Cell 1</td>                    <td>Cell 2</td>                </tr>            </tbody>        </table>    </div></div>
+<hr />
 <pre>&lt;%= table begin %&gt;
     &lt;thead&gt;
         &lt;tr&gt;
@@ -162,8 +162,8 @@
         &lt;/tr&gt;
     &lt;/tbody&gt;
 &lt;/table&gt;</pre>
-<p>    <table class="table">        <thead>            <tr>                <th>th 1</th>                <th>th 2</th>        </thead>        <tbody>            <tr>                <td>Cell 1</td>                <td>Cell 2</td>            </tr>            <tr>                <td>Cell 1</td>                <td>Cell 2</td>            </tr>        </tbody>    </table></p>
-<p><hr /></p>
+<div>    <table class="table">        <thead>            <tr>                <th>th 1</th>                <th>th 2</th>        </thead>        <tbody>            <tr>                <td>Cell 1</td>                <td>Cell 2</td>            </tr>            <tr>                <td>Cell 1</td>                <td>Cell 2</td>            </tr>        </tbody>    </table></div>
+<hr />
 <pre>%= table hover, striped, condensed, begin
     &lt;thead&gt;
         &lt;tr&gt;
@@ -198,8 +198,8 @@
         &lt;/tr&gt;
     &lt;/tbody&gt;
 &lt;/table&gt;</pre>
-<p>    <table class="table table-condensed table-hover table-striped">        <thead>            <tr>                <th>th 1</th>                <th>th 2</th>        </thead>        <tbody>            <tr>                <td>Cell 1</td>                <td>Cell 2</td>            </tr>            <tr>                <td>Cell 1</td>                <td>Cell 2</td>            </tr>        </tbody>    </table></p>
-<p><hr /></p>
+<div>    <table class="table table-condensed table-hover table-striped">        <thead>            <tr>                <th>th 1</th>                <th>th 2</th>        </thead>        <tbody>            <tr>                <td>Cell 1</td>                <td>Cell 2</td>            </tr>            <tr>                <td>Cell 1</td>                <td>Cell 2</td>            </tr>        </tbody>    </table></div>
+<hr />
 <pre>%= table &#39;Heading Table 3&#39;, hover, striped, condensed, begin
     &lt;thead&gt;
         &lt;tr&gt;
@@ -239,7 +239,7 @@
         &lt;/tbody&gt;
     &lt;/table&gt;
 &lt;/div&gt;</pre>
-<p>    <div class="panel panel-default">        <div class="panel-heading">            <h3 class="panel-title">Heading Table 3</h3>        </div>        <table class="table table-condensed table-hover table-striped">            <thead>                <tr>                    <th>th 1</th>                    <th>th 2</th>            </thead>            <tbody>                <tr>                    <td>Cell 1</td>                    <td>Cell 2</td>                </tr>                <tr>                    <td>Cell 1</td>                    <td>Cell 2</td>                </tr>            </tbody>        </table>    </div></p>
+<div>    <div class="panel panel-default">        <div class="panel-heading">            <h3 class="panel-title">Heading Table 3</h3>        </div>        <table class="table table-condensed table-hover table-striped">            <thead>                <tr>                    <th>th 1</th>                    <th>th 2</th>            </thead>            <tbody>                <tr>                    <td>Cell 1</td>                    <td>Cell 2</td>                </tr>                <tr>                    <td>Cell 1</td>                    <td>Cell 2</td>                </tr>            </tbody>        </table>    </div></div>
         </div>
         <pre style="background-color: #fff; border-width: 0px;">
 
