--- a/examples/toolbar-1.html
+++ b/examples/toolbar-1.html
@@ -40,7 +40,7 @@
         &lt;button class=&quot;btn btn-default&quot; type=&quot;button&quot;&gt;Button 6&lt;/button&gt;
     &lt;/div&gt;
 &lt;/div&gt;</pre>
-<p>    <div class="btn-toolbar" id="my-toolbar">        <div class="btn-group">            <button class="btn btn-default" type="button">Button 1</button>            <button class="btn btn-default" type="button">Button 2</button>            <button class="btn btn-default" type="button">Button 3</button>        </div>        <div class="btn-group">            <button class="btn btn-primary" type="button">Button 4</button>            <button class="btn btn-default" type="button">Button 5</button>            <button class="btn btn-default" type="button">Button 6</button>        </div>    </div></p>
+<div>    <div class="btn-toolbar" id="my-toolbar">        <div class="btn-group">            <button class="btn btn-default" type="button">Button 1</button>            <button class="btn btn-default" type="button">Button 2</button>            <button class="btn btn-default" type="button">Button 3</button>        </div>        <div class="btn-group">            <button class="btn btn-primary" type="button">Button 4</button>            <button class="btn btn-default" type="button">Button 5</button>            <button class="btn btn-default" type="button">Button 6</button>        </div>    </div></div>
         </div>
         <pre style="background-color: #fff; border-width: 0px;">
 
