Fixed dropdown example

--- a/examples/dropdown-1.html
+++ b/examples/dropdown-1.html
@@ -13,7 +13,7 @@
             
 
 <p>By default, <code>tabindex</code> is set to <code>-1</code>:</p>
-<pre>&lt;p class=&quot;text-right&quot;&gt;
+<pre>&lt;div class=&quot;text-right&quot;&gt;
     &lt;%= dropdown
          [&#39;Dropdown 1&#39;, id =&gt; &#39;a_custom_id&#39;, right, items =&gt; [
             [&#39;Item 1&#39;, [&#39;item1&#39;] ],
@@ -21,7 +21,7 @@
             [],
             [&#39;Item 3&#39;, [&#39;item3&#39;] ]
          ] ] %&gt;
-&lt;/p&gt;</pre>
+&lt;/div&gt;</pre>
 <pre>&lt;div class=&quot;text-right&quot;&gt;
     &lt;div class=&quot;dropdown&quot;&gt;
         &lt;button class=&quot;btn btn-default dropdown-toggle&quot; type=&quot;button&quot; id=&quot;a_custom_id&quot; data-toggle=&quot;dropdown&quot;&gt;Dropdown 1&lt;/button&gt;
