Remove a bit of whitespace

--- a/examples/context_menu-1.html
+++ b/examples/context_menu-1.html
@@ -24,8 +24,7 @@
     &lt;li&gt;&lt;a class=&quot;menuitem&quot; href=&quot;item2&quot; tabindex=&quot;-1&quot;&gt;Item 2&lt;/a&gt;&lt;/li&gt;
     &lt;li class=&quot;divider&quot;&gt;&lt;/li&gt;
     &lt;li&gt;&lt;a class=&quot;menuitem&quot; href=&quot;item3&quot; tabindex=&quot;-1&quot;&gt;Item 3&lt;/a&gt;&lt;/li&gt;
-&lt;/ul&gt;
-</pre>
+&lt;/ul&gt;</pre>
 <div>    <ul class="dropdown-menu" id="my-context-menu">        <li><a class="menuitem" href="item1" tabindex="-1">Item 1</a></li>        <li><a class="menuitem" href="item2" tabindex="-1">Item 2</a></li>        <li class="divider"></li>        <li><a class="menuitem" href="item3" tabindex="-1">Item 3</a></li>    </ul></div>
         </div>
         <pre style="background-color: #fff; border-width: 0px;">
